--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.6.13"
+    "mongoose": "^5.6.13",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
